// Copyright (c) Piotr Morgwai Kotarbinski, Licensed under the Apache License, Version 2.0
syntax = "proto3";
package pl.morgwai.base.grpc.scopes.tests.server.grpc;

option java_outer_classname = "RecordStorageProto";
option java_multiple_files = true;

service RecordStorage {
	rpc store(Record) returns (NewRecordId) {}
	rpc storeMultiple(stream StoreRecordRequest) returns (stream StoreRecordResponse) {}
	rpc getAll(Empty) returns (stream Record) {}
}

message Empty {}

message Record {
	int64 id = 1;
	string content = 2;
}

message NewRecordId {
	int64 id = 1;
}

message StoreRecordRequest {
	int64 requestId = 1;
	string content = 2;
}

message StoreRecordResponse {
	int64 requestId = 1;
	int64 recordId = 2;
}
